--- a/templates/password.html
+++ b/templates/password.html
@@ -10,7 +10,7 @@
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password" required minlength="" maxlength="30">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="confirmation" type="password" required minlength="" maxlength="30">
+            <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirmation" type="password" required minlength="" maxlength="30">
         </div>
         <button class="btn btn-primary" type="submit">Change password</button>
     </form>
