--- a/templates/register.html
+++ b/templates/register.html
@@ -22,13 +22,6 @@
 
     <script>
 
-    /*  let arr_en = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z'];
-        let arr_EN = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z'];
-        let arr_symb = ['!', '@', '#', '$', '%', '&', '?', '-', '+', '=', '~'];
-        let arr_num = ["1", "2", "3", "4", "5", "6", "7", "8", "9", "0"];
-        let arr_symbName = ['@', '$', '&','-'];
-    */
-
         function validateForm() {
                 let username = document.forms["register"]["username"].value;
                 let password = document.forms["register"]["password"].value;
@@ -48,6 +41,17 @@
                 if (checkUsernameInvalidSymbol(username)) {
                     document.getElementById("username").style.border = "1px solid red";
                     alert("Username contains an invalid character. Use upper and lower case characters of the English alphabet and digit from 0 to 9");
+                    document.getElementById("username").focus()
+                    return false;
+                }
+                else {
+                    document.getElementById("username").style.border = "1px solid green";
+                    document.getElementById("button").focus()
+                }
+
+                if (checkUsernameMastContain(username)) {
+                    document.getElementById("username").style.border = "1px solid red";
+                    alert("Username not contains alphabet character. Use upper or lower case characters of the English alphabet and digit from 0 to 9");
                     document.getElementById("username").focus()
                     return false;
                 }
@@ -101,82 +105,7 @@
                 }
                 
                     return true;
-                
             }
-
-        
-     /*   function checkPasswordMastHave(word) {
-
-            for (let i = 0; i < word.length; i++) {
-                if (arr_en.indexOf(word[i]) >= 0){
-                    for (let b = 0; b < word.length; b++) {
-                        if (arr_EN.indexOf(word[b]) >= 0) {
-                            for (let s = 0; s < word.length; s++) {
-                                if (arr_symb.indexOf(word[s]) >= 0) {
-                                    for (let c = 0; c < word.length; c++) {
-                                        if (arr_num.indexOf(word[c]) >= 0 ) {
-                                            return false;
-                                            break;
-                                        }
-                                    }
-                                }
-                            }
-                        } 
-                    }
-                }
-            }
-            return true;
-        } */
-
-     /*   function checkPasswordBadSymbol(word) {
-
-            for (let i = 0; i < word.length; i++) {
-                    if (arr_en.indexOf(word[i]) === -1){
-                        if (arr_EN.indexOf(word[i]) === -1) {        
-                            if (arr_symb.indexOf(word[i]) === -1){          
-                                if (arr_num.indexOf(word[i]) === -1) {
-                                    return true;
-                                    break;
-                                }   
-                            }
-                        }  
-                    }
-                }
-                return false;    
-        } */
-
-      /*  function checkUsernameBadSymbol(word) {
-
-            for (let i = 0; i < word.length; i++) {
-                if (arr_en.indexOf(word[i]) === -1){
-                    if (arr_EN.indexOf(word[i]) === -1) {        
-                        if (arr_symbName.indexOf(word[i]) === -1){          
-                            if (arr_num.indexOf(word[i]) === -1) {
-                                return true;
-                                break;
-                            }   
-                        }
-                    }  
-                }
-            }
-            return false;    
-        } */
-
-      /*  function checkUsernameMastHave(word) {
-            for (let i = 0; i < word.length; i++) {
-                if (arr_en.indexOf(word[i]) >= 0){
-                    return false;
-                    break;
-                }
-            }
-            for (let b = 0; b < word.length; b++) {
-                if (arr_EN.indexOf(word[b]) >= 0) {                
-                    return false;
-                    break;
-                }
-            }
-            return true; 
-        } */
 
     </script>
     
